# env-doctor

./: .gitignore  CURRENT_STATE.md  IMPLEMENTATION_PLAN.md  Initial-Plan.md  LICENSE  PROMPT.md  README.md  examples.txt  pyproject.toml
.bob/: mcp.json
.github/workflows/: ci.yml
bob_sessions/: bob_task_may-16-2026_1-06-01-pm.md  bob_task_may-16-2026_1-19-06-pm.md  bob_task_may-16-2026_1-21-08-pm.md  bob_task_may-16-2026_1-30-32-pm.md  bob_task_may-16-2026_1-32-11-pm.md  bob_task_may-16-2026_1-40-50-pm.md  bob_task_may-16-2026_1-53-30-pm.md  bob_task_may-16-2026_11-50-39-am.md  bob_task_may-16-2026_11-58-45-am.md  bob_task_may-16-2026_12-05-03-pm.md  bob_task_may-16-2026_12-08-59-pm.md  bob_task_may-16-2026_12-16-32-pm.md  bob_task_may-16-2026_12-37-23-pm.md  bob_task_may-16-2026_12-51-12-pm.md  bob_task_may-17-2026_9-50-35-am.md
docs/: secure_proxy_setup.md  watsonx_orchestrate_setup.md
examples/: compatible_pyproject.toml  compatible_requirements.txt  incompatible_pyproject.toml  incompatible_requirements.txt
scripts/: debug_db.py  populate_showcase_db.py
src/env_doctor/: __init__.py  main.py
src/env_doctor/cli/: __init__.py  check.py  inspect.py  patch.py  recommend.py  repo.py  report.py  submit_stack.py  update.py  vram.py
src/env_doctor/core/: __init__.py  analysis.py  compatibility.py  conflict_detector.py  dependency_graph.py  recommendations.py  severity_scorer.py  version_matcher.py
src/env_doctor/database/: __init__.py  compiler.py  manager.py  models.py  queries.py  repository.py  schema.sql  uid_generator.py
src/env_doctor/mcp_server/: server.py
src/env_doctor/reporting/: __init__.py  ai_analyzer.py  executor.py  pr_creator.py  submission_client.py
src/env_doctor/scanner/: __init__.py  bootstrap.py  dependency_parser.py  environment.py  pypi_client.py  wheel_extractor.py
src/env_doctor/utils/: config.py  requirements_parser.py
src/env_doctor/vram/: __init__.py  gpu_detector.py  kv_cache_estimator.py  model_fetcher.py  oom_detector.py  runtime_profiles.py  runtime_profiles.yaml  weight_calculator.py
tests/: README.md  test_cli.py  test_compiler.py  test_core.py  test_database.py  test_integration.py  test_recommendations.py  test_reporting.py  test_scanner.py  test_utils.py  test_vram.py  verify_compiler.py  verify_database.py  verify_recommendations.py  verify_reporting.py  verify_scanner.py  verify_vram.py
tmp_repo/: compatibility_rules.yaml  compatible_requirements.txt  incompatible_pyproject.toml  incompatible_requirements.txt  runtime_profiles.yaml  stable_stacks.yaml
watsonx/: agent.yaml  connection.yaml  mcp_server.yaml
watsonx/mcp_server/: requirements.txt  server.py
workers/env-doctor-incompatibility-repeater/: package-lock.json  package.json  worker-configuration.d.ts  wrangler.jsonc
workers/env-doctor-incompatibility-repeater/src/: index.ts
