[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "env-doctor-pypi"
version = "0.1.0.1"
description = "AI development environment diagnostic and optimization tool"
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0"
authors = [
    { name = "env-doctor contributors" }
]
keywords = ["ai", "ml", "environment", "diagnostics", "optimization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "packaging>=23.0",
    "sqlmodel>=0.0.14",
    "huggingface_hub>=0.19.0",
    "pyyaml>=6.0.0",
    "nvidia-ml-py>=12.535.133",
    "nbclient>=0.10.4",
    "nbformat>=5.10.4",
    "mcp>=1.27.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
    "ibm-watsonx-orchestrate>=2.9.0",
]

[project.scripts]
env-doctor = "env_doctor.main:app"

[project.urls]
Homepage = "https://github.com/yourusername/env-doctor"
Documentation = "https://github.com/yourusername/env-doctor#readme"
Repository = "https://github.com/yourusername/env-doctor"
Issues = "https://github.com/yourusername/env-doctor/issues"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/env_doctor"]
include = [
    "/src/env_doctor",
    "/tests",
    "/LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "huggingface_hub.*",
    "sqlmodel.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=env_doctor",
    "--cov-report=term-missing",
]
